<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_white"
        tools:context=".frontend.activity.kantin.KantinMenuActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_layout"
            app:title="@string/kantin"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:titleTextColor="@color/black" />

        <TextView
            android:id="@+id/dashboard_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/dashboard"
            android:textColor="@color/grey"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/balance_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/dashboard_text"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_text">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/greetings_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText"
                    tools:text="Hai, Innovanesia!" />

                <TextView
                    android:id="@+id/balance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/saldo"
                    android:textColor="@color/grey"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/greetings_text" />

                <ImageView
                    android:id="@+id/coins_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/balance_text"
                    app:layout_constraintTop_toBottomOf="@+id/balance_text"
                    app:srcCompat="@drawable/currency_icon"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/balance_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/coins_icon"
                    app:layout_constraintEnd_toEndOf="@+id/greetings_text"
                    app:layout_constraintStart_toEndOf="@+id/coins_icon"
                    app:layout_constraintTop_toTopOf="@+id/coins_icon"
                    tools:ignore="HardcodedText"
                    tools:text="0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <ProgressBar
            android:id="@+id/main_menu_kantin_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/menu_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/build_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balance_card"
            tools:ignore="SpeakableTextPresentCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/news_carousel"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    app:iss_auto_cycle="true"
                    app:iss_corner_radius="20"
                    app:iss_delay="0"
                    app:iss_error_image="@drawable/error"
                    app:iss_period="3000"
                    app:iss_placeholder="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/menu_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Menu"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/news_carousel"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/calculator_button"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/show_qr_button"
                    app:layout_constraintEnd_toStartOf="@+id/show_qr_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/show_qr_button">

                    <ImageView
                        android:id="@+id/calculator_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/calculator_icon"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/calculator_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="8dp"
                    android:text="Kalkulator"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/calculator_button"
                    app:layout_constraintStart_toStartOf="@+id/calculator_button"
                    app:layout_constraintTop_toBottomOf="@+id/calculator_button"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/show_qr_button"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/menu_text">

                    <ImageView
                        android:id="@+id/show_qr_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_baseline_qr_code_scanner_24"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/show_qr_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="8dp"
                    android:text="Tampilkan QR Code"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/show_qr_button"
                    app:layout_constraintStart_toStartOf="@+id/show_qr_button"
                    app:layout_constraintTop_toBottomOf="@+id/show_qr_button"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/transaction_history_button"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/show_qr_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/show_qr_button"
                    app:layout_constraintTop_toTopOf="@+id/show_qr_button">

                    <ImageView
                        android:id="@+id/transaction_history_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/document_icon"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/transaction_history_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="8dp"
                    android:text="Rekap Transaksi"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/transaction_history_button"
                    app:layout_constraintStart_toStartOf="@+id/transaction_history_button"
                    app:layout_constraintTop_toBottomOf="@+id/transaction_history_button"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/editprofile_button"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/calculator_button"
                    app:layout_constraintStart_toStartOf="@+id/calculator_button"
                    app:layout_constraintTop_toBottomOf="@+id/show_qr_text">

                    <ImageView
                        android:id="@+id/editprofile_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/contact_icon"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/editprofile_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="Sunting Profil"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/editprofile_button"
                    app:layout_constraintStart_toStartOf="@+id/editprofile_button"
                    app:layout_constraintTop_toBottomOf="@+id/editprofile_button"
                    tools:ignore="HardcodedText" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/build_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/build"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>